--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.3",
@@ -21,9 +22,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/redis": "^4.0.10",
     "@uploadthing/react": "^7.3.2",
+    "@upstash/redis": "^1.35.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.6.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
@@ -31,6 +35,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "recharts": "^2.15.4",
+    "redis": "^5.6.0",
     "sonner": "^2.0.6",
     "svix": "^1.69.0",
     "swr": "^2.3.4",
