--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@upstash/redis": "^1.35.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
+    "i18next": "^25.3.2",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
@@ -34,6 +36,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^15.6.1",
     "recharts": "^2.15.4",
     "redis": "^5.6.0",
     "sonner": "^2.0.6",
