--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.3",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
